# TrainWreckCoin

./: .gitignore  CMakeLists.txt  README.md  main.cpp
communications/: BlockStore.h  ZeroMQBroadcastWrapper.h
transactions/: DataSampleTransaction.h  ModelDefinitionTransaction.h  NextDataStepTransaction.h  ProposedWeightsTransaction.h  ValidationTransaction.h
util/: Logger.h
workers/: Benefactor.h  SimpleNeuralNetwork.h  TrainingMiner.h  ValidationWorker.h
